syntax = "proto3";

package errors;

option go_package = "xgo/tests/pb/pberrors";

//import "proto/json.proto";

message InvalidSyntaxJSON {
  int32 f_int32a = 1;
  int32 f_int32b = 2;
}
